--- a/chat/package.json
+++ b/chat/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dictionary-en": "^4.0.0",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
+    "nspell": "^2.1.5",
+    "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
