--- a/chat/package.json
+++ b/chat/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "smoke:mcp": "MCP_auditor_ARGS= node --env-file=.env.local scripts/smoke-mcp.mjs"
   },
   "dependencies": {
     "dictionary-en": "^4.0.0",
@@ -25,5 +26,6 @@
     "eslint-config-next": "15.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12"
-  }
+  },
+  "type": "module"
 }
